# botserver

./: .editorconfig  .gitignore  .project  CMakeLists.txt  TODO.txt  botserver.service  config-example.conf  requirements.txt  run.sh
src/: GameConfig.cpp  GameConfig.h  GameLogic.cpp  GameLogic.h  global_types.cpp  global_types.h  main.cpp
src/ExternalApi/: BaseAPI.cpp  BaseAPI.h  MainApiFacade.cpp  MainApiFacade.h  TelegramAPI.cpp  TelegramAPI.h  VKApi.cpp  VKApi.h
src/core/: BaseSerializedObject.cpp  BaseSerializedObject.h  GameTimer.cpp  GameTimer.h  PrimaryServer.cpp  PrimaryServer.h  base_dialog.cpp  base_dialog.h  base_message.h  bot_response.cpp  bot_response.h  button.cpp  button.h  client.cpp  client.h  client_storage.cpp  client_storage.h  core.cpp  core.h  errors.cpp  errors.h  game_config.cpp  game_config.h  game_timer.cpp  game_timer.h  handler_interface.h  preprocessors.h  quest.cpp  quest.h  quest_storage.cpp  quest_storage.h  request.cpp  request.h  server.cpp  server.h  unexpected_dialog.cpp  unexpected_dialog.h  user_inbox_message.cpp  user_inbox_message.h
src/dialogs/: dialog_map.cpp  dialog_map.h  inbox_message_dialog.cpp  inbox_message_dialog.h  show_message_dialog.cpp  show_message_dialog.h  start_messaging_dialog.cpp  start_messaging_dialog.h
src/httpserver/: HttpServerScgi.cpp  HttpServerScgi.h
src/messages/: inbox_message_handler.cpp  inbox_message_handler.h  msg_map.cpp  msg_map.h  update_quest_message.cpp  update_quest_message.h
src/net/: http_handlers.cpp  http_handlers.h  http_server.cpp  http_server.h  urls.h
src/quest/: GameInboxMessage.cpp  GameInboxMessage.h  GameQuest.cpp  GameQuest.h  GeneralInboxGameMessage.cpp  GeneralInboxGameMessage.h  SingleDialog.cpp  SingleDialog.h
src/storage/: BaseStorage.h  FileStorage.cpp  FileStorage.h  GameStorage.cpp  GameStorage.h
src/user/: GameUser.cpp  GameUser.h  GameUserManager.cpp  GameUserManager.h
